--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ body {
     line-height: 120%;
     letter-spacing: 0;
     color: var(--slate-900);
+    margin: 0;
 }
 .text-preset-2 {
     font-size: var(--font-size-15);
@@ -37,6 +38,7 @@ body {
     line-height: 140%;
     letter-spacing: 0.2px;
     color: var(--slate-500);
+    margin: 0;
 }
 .card {
     position: absolute;
