--- a/style.css
+++ b/style.css
@@ -13,6 +13,10 @@
       /* font-size */
       --font-size-15: .938rem;
       --font-size-22: 1.375rem;
+      /* box shadow */
+      --box-shadow-color: 0, 0, 0;
+      --box-shadow-color-alpha: .0477;
+      --box-shadow: 0 1.563rem 1.563rem 0 rgba(var(--box-shadow-color), var(--box-shadow-color-alpha));
 }
 html {
     font-size: 16px;
@@ -54,7 +58,7 @@ body {
     flex-direction: column;
     align-items: center;
     gap: var(--spacing-300);
-    box-shadow: 0 1.563rem 1.563rem 0 rgba(0, 0, 0, .0477);
+    box-shadow: var(--box-shadow);
 }
 .img-container {
     width: 18rem;
